# bic-test-repository-llm

./: README.md  benchmark_results.csv  main.py  model_comparison_20250909_185023.csv  pyproject.toml  server_logs.txt  test_results_benchmark_20250909_185023.csv  test_results_generate_20250909_185023.csv
app/: __init__.py  config.py  models.py  openrouter.py  routes.py  utils.py
tests/: sample_prompts.txt  test_models_comparison.py
